# Agentic-AI-Cyber-Security

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
benchmarks/: results.md  self_scan_results.json
cli/: main.py
config/: settings.yaml
core/: __init__.py  ast_analyzer.py  atlas_mapper.py  bloom_filter.py  chain_detector.py  clickbait_detector.py  context.py  cross_file_taint.py  dependency_analyzer.py  engine.py  fix_generator.py  grader.py  import_extractor.py  inference_monitor.py  js_ast_analyzer.py  llm_worm_detector.py  logger.py  mcp_auditor.py  model_scanner.py  models.py  owasp_llm_mapper.py  package_checker.py  pattern_matcher.py  policy_engine.py  prompt_scanner.py  rag_scanner.py  redteam_generator.py  reporter.py  rule_loader.py  runtime_monitor.py  sandbox_evaluator.py  sbom_generator.py  secrets_scanner.py  semantic_reviewer.py  taint_tracker.py  tool_response_analyzer.py
data/: known_malicious.yaml
integrations/: __init__.py  github_actions.py  sarif_exporter.py
mcp_server/: __init__.py  schemas.py  server.py  tools.py
rules/: c_cpp.yaml  common.yaml  csharp.yaml  dockerfile.yaml  go.yaml  java.yaml  javascript.yaml  kotlin.yaml  kubernetes.yaml  php.yaml  prompt_injection.yaml  python.yaml  ruby.yaml  rust.yaml  shell.yaml  swift.yaml  terraform.yaml  typescript.yaml  yaml_security.yaml
scripts/: build_bloom_filters.py  self_scan.py
templates/: report.html
tests/: conftest.py  test_ast_analyzer.py  test_benchmark.py  test_context.py  test_cross_file_taint.py  test_engine.py  test_fix_generator.py  test_integration.py  test_integrations.py  test_js_ast_analyzer.py  test_mcp_server.py  test_models.py  test_p1_p2_p3.py  test_package_checker.py  test_pattern_matcher.py  test_prompt_scanner.py  (+8 more)
(+20 files in other folders)
